# personal_mcp_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: __init__.py  config.py  logging.py  main.py
app/adapters/: __init__.py  calendar_client.py  drive_client.py  gmail_client.py  llm_client.py  notion_client.py
app/mcp/: server.py
app/mcp/resources/: __init__.py  projects.py  schemas.py  status.py
app/mcp/tools/: calendar.py  email.py  notes.py  planning.py  projects.py  tasks.py
app/schemas/: __init__.py  calendar.py  checklist.py  common.py  email.py  events.py  notes.py  planning.py  projects.py  tasks.py
app/services/: __init__.py  calendar_service.py  checklist_service.py  cost_service.py  email_service.py  event_service.py  matching_service.py  note_service.py  planning_service.py  project_service.py  task_service.py
app/utils/: __init__.py  confidence.py  datetime.py  ids.py  text.py
app/workflows/: __init__.py  simple_graph.py
app/workflows/plan_day/: __init__.py  graph.py  nodes.py  state.py
app/workflows/process_emails/: __init__.py  graph.py  nodes.py  state.py
app/workflows/process_notes_inbox/: __init__.py  graph.py  nodes.py  state.py
app/workflows/process_task_inbox/: __init__.py  graph.py  nodes.py  state.py
tests/: __init__.py  fakes.py  test_services_and_workflows.py
